--- a/README
+++ b/README
@@ -1,3 +1,17 @@
+          _______  _______ _________   _        _______
+|\     /|(  ___  )(  ____ \\__   __/  ( \      (  ____ )
+| )   ( || (   ) || (    \/   ) (     | (      | (    )|
+| (___) || |   | || (_____    | |     | |      | (____)|
+|  ___  || |   | |(_____  )   | |     | |      |  _____)
+| (   ) || |   | |      ) |   | |     | |      | (
+| )   ( || (___) |/\____) |   | |     | (____/\| )
+|/     \|(_______)\_______)   )_(     (_______/|/
+-------------------------------------------------
+ HOSTLP -- https://www.hostlp.com.br
+-------------------------------------------------
+
+
+
 # Importar Whitelist
 curl -k https://raw.githubusercontent.com/thytetgc/SPFBL/main/white.txt > /tmp/white.txt
 cat /tmp/white.txt | while read LINHA; do spfbl superwhite add "${LINHA}" >/dev/null 2>&1; done
@@ -6,3 +20,6 @@ cat /tmp/white.txt | while read LINHA; do spfbl superwhite add "${LINHA}" >/dev/
 curl -k https://raw.githubusercontent.com/thytetgc/SPFBL/main/block.txt > /tmp/block.txt
 cat /tmp/block.txt | while read LINHA; do spfbl superblock add "${LINHA}" >/dev/null 2>&1; done
 
+#Importar Dynamiclist
+curl -k https://raw.githubusercontent.com/thytetgc/SPFBL/main/dynamic.txt > /tmp/dynamic.txt
+cat /tmp/dynamic.txt | while read LINHA; do spfbl dynamic add "${LINHA}" >/dev/null 2>&1; done
